--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ nav a:focus {
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
 
-.skip {
+.skip a {
     position: absolute;
     top: -40px;
     left: 0;
@@ -126,7 +126,7 @@ nav a:focus {
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 
-.skip:focus {
+.skip a:focus {
     top: 20px;
 }
 
